--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "console-log-to-file": "^1.1.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
     "pg": "^8.16.3"
   }
 }
